catalog/elk/kubernetes/kibana/kibana-nginx-deployement.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elk
        component: nginx
        role: proxy
        release: stable      # canary
        environment: staging # dev, qa, production
        tier: daemon         # frontend, backend, cache
        partition: all       # customer_1, customer_2, developer_1, beta_release
    spec:
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: nginx:1.10
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - name: kibana-nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: kibana-nginx-htpasswd
          mountPath: /etc/nginx/htpasswd.d

      volumes:
        - name: kibana-nginx-conf
          configMap:
            name: kibana-nginx-conf
            items:
            - key: default.conf
              path: default.conf
        - name: kibana-nginx-htpasswd
          secret:
            secretName: kibana
            items:
            - key: htpasswd
              path: .htpasswd
              mode: 0644
