catalog/elk/kubernetes/kibana/kibana-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: elk
    component: nginx-lb
    role: load-balancer
    release: stable      # canary
    environment: staging # dev, qa, production
    tier: daemon         # frontend, backend, cache
    partition: all       # customer_1, customer_2, developer_1, beta_release
  annotations:
    # AWS Managed cert ARN
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  selector:
    app: elk
    component: nginx
  ports:
  - port: 80          # use   443     if you use an SSL Cert managed by AWS
    name: http        # use   https   if you use an SSL Cert managed by AWS
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: LoadBalancer
