catalog/elk/kubernetes/kibana/kibana-oauth-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: elk
    component: kibana
    role: dashboard
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
  annotations:
spec:
  selector:
    app: elk
    component: kibana
  ports:
  - port: 4180
    name: http
    protocol: TCP
