catalog/elk/kubernetes/kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-internal-lb
  labels:
    app: elk
    component: kibana-internal-lb
    role: load-balancer
    release: stable      # canary
    environment: staging # dev, qa, production
    tier: frontend       # frontend, backend, cache
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  selector:
    app: elk
    component: kibana
  ports:
  - port: 5601
    name: http
    protocol: TCP
    targetPort: 5601
